--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "devDependencies": {
     "@types/node": "^18.7.17",
     "tslint": "^6.1.3",
-    "typescript": "^4.8.3",
-    "ts-standard": "11.0.0"
+    "typescript": "^4.8.3"
   }
 }
