--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.7.17",
+    "@types/react": "^18.3.4",
+    "react": "^18.3.1",
     "tslint": "^6.1.3",
     "typescript": "^4.8.3"
   }
